# pb-fm-mcp

./: .coverage  .dockerignore  .gitignore  .samignore  2025-07-08-command-messageinit-is-analyzing-your-codebase.txt  AWSLambdaWebAdapterContainerVsZip.md  CLAUDE.md  Dockerfile  Dockerfile-clean  Dockerfile.browser  Makefile  README-heartbeat-ui-mcp.md  README.md  async-issues.md  async_wrapper.py  clean.sh  clean_decorators.py  comprehensive_fix.py  debug_wildcard.py  delegation state 3.md  demo_streaming.py  demo_string_math.py  deploy.py  deploy.sh  direct_test.py  elegant_path_annotation_demo.py  example_path_annotation_approaches.py  example_path_aware_usage.py  extract_functions.py  fix_decorators.py  fix_decorators_properly.py  fix_decorators_simple.py  fix_syntax_errors.py  function_deployment_analysis.py  function_protocols.csv  function_protocols_prod.csv  how_not_to_proxy_s3_thru_lambda.md  input.json  install-mcp-minimal.sh  lambda_handler.py  (+47 more)
.aws-sam/: build 2.toml  build.toml
.claude/: settings.local.json
doc/: Figure Markets API URLs - Quick Copy-Paste List.md  hastra_fm_mcp_data_dictionary.csv  hastra_fm_report v3.md  hastra_hash_management_guide.md  jqpath-improvements.md
docs/: DEPLOYMENT-GUIDE.md  ai-controlled-ui-architecture.md  ai_visualization_implementation_roadmap.md  async-event-loop-analysis.md  browser_automation_performance.md  browser_extension_architecture.md  claude code and python - best practices.md  claude-orchestration-summary.md  claude_mcp_web_architecture.md  development_roadmap.md  eventbridge-alternative-solution.md  (+23 more)
(+227 files in other folders)
