[project]
name = "hastra-fm-mcp"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "mcp",
    "pyyaml>=6.0.2",
    "structlog",
    "httpx",
]

[project.scripts]
jqpy = "jqpy.cli:main"

[dependency-groups]
dev = [
    "workers-py",
    "pytest",
    "requests",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 100
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.uv.sources]
workers-py = { git = "https://github.com/cloudflare/workers-py" }
